--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=3e3b8c738c7c3ea9a418331546ade3c5",
-    "/css/app.css": "/css/app.css?id=c30e5221bf77986f7e178b79b6efe0f4"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
